# RLCar_gazebo2

./: LICENSE  README.md  setup_script.sh
rlcar_description/: CMakeLists.txt  package.xml
rlcar_description/config/: racecar_controller.yaml
rlcar_description/launch/: rlcar_description.launch.py
rlcar_description/meshes/: logi_camera.stl  wheel.stl
rlcar_description/rviz/: description.rviz
rlcar_description/urdf/: rlcar_body.urdf
rlcar_gazebo/: CMakeLists.txt  package.xml
rlcar_gazebo/config/: ackermann_controller.yaml
rlcar_gazebo/launch/: caffee_world.launch.py  empty_world.launch.py  racecourse.launch.py
rlcar_gazebo/meshes/: rplidar_a2.stl
rlcar_gazebo/rviz/: gazebo_racecourse.rviz  gazebo_world.rviz
rlcar_gazebo/urdf/: macros.xacro  materials.xacro  rlcar_body.gazebo  rlcar_body.urdf.xacro
rlcar_gazebo/worlds/: caffee.world  empty_world.world  racecar_course.world
rlcar_gazebo_controller/: CMakeLists.txt  package.xml
rlcar_gazebo_controller/src/: rlcar_gazebo_controller.cpp
rlcar_gazebo_navigation/: CMakeLists.txt  package.xml
rlcar_gazebo_navigation/launch/: caffee_bringup_launch.py  localization_launch.py  navigation_launch.py  racecourse_bringup_launch.py  rviz_view_launch.py  slam_launch.py
rlcar_gazebo_navigation/map/: boxer_map.pgm  boxer_map.yaml  cafe_map.pgm  cafe_map.yaml  cafe_map_editted.pgm  cafe_map_editted.yaml  racecourse.pgm  racecourse.yaml
rlcar_gazebo_navigation/param/: navigate_w_replanning_and_recovery.xml  (+2 more)
rlcar_gazebo_odometry/: CMakeLists.txt  package.xml
rlcar_gazebo_slam/: CMakeLists.txt  package.xml
(+15 files in other folders)
